[gd_scene load_steps=4 format=3 uid="uid://dbma3d61ptios"]

[ext_resource type="Script" path="res://scenes/ui/pause_menu/pause_menu.gd" id="1_7lbeg"]
[ext_resource type="Script" path="res://addons/OBSControlLibrary/SlideoutContainer/slide_out_container.gd" id="1_o0x6o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2w3pm"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.0850156, 0.207772, 0.20674, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7lbeg")

[node name="SlideMenu" type="Container" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o0x6o")
slide_duration = 0.4
transition_type = 7
ease_type = 2

[node name="VLayout" type="VBoxContainer" parent="SlideMenu"]
layout_mode = 2

[node name="Titlebar" type="PanelContainer" parent="SlideMenu/VLayout"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2w3pm")

[node name="LBL_Titlebar" type="Label" parent="SlideMenu/VLayout/Titlebar"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="MainArea" type="PanelContainer" parent="SlideMenu/VLayout"]
layout_mode = 2

[node name="MC" type="MarginContainer" parent="SlideMenu/VLayout/MainArea"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="SlideMenu/VLayout/MainArea/MC"]
layout_mode = 2

[node name="BTN_Resume" type="Button" parent="SlideMenu/VLayout/MainArea/MC/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="BTN_Options" type="Button" parent="SlideMenu/VLayout/MainArea/MC/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="BTN_Quit" type="Button" parent="SlideMenu/VLayout/MainArea/MC/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="SlideMenu/VLayout/MainArea/MC/VBoxContainer/BTN_Resume" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="SlideMenu/VLayout/MainArea/MC/VBoxContainer/BTN_Options" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="SlideMenu/VLayout/MainArea/MC/VBoxContainer/BTN_Quit" to="." method="_on_btn_quit_pressed"]
